improved backfill, added output json gen, cleaned default yaml
